# vue-social-feed-4

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: SECURITY.md  pull_request_template.md
.github/workflows/: ci.yml
.project-factory/: manifest.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
database/: init.sql
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md
frontend/: package.json
frontend/src/: App.js  index.html  styles.css
scripts/: seed_db.py  setup.sh
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: admin.py  analytics.py  auth.py  health.py  items.py  notifications.py  (+3 more)
src/cli/: manage.py  seed.py
src/core/: config.py  database.py  dependencies.py  events.py  exceptions.py  filters.py  health.py  pagination.py  security.py
src/middleware/: __init__.py  audit.py  logging.py  rate_limit.py
src/models/: __init__.py  audit_log.py  item.py  notification.py  settings.py  tag.py  user.py
src/schemas/: __init__.py  admin.py  analytics.py  common.py  item.py  notification.py  user.py
src/services/: analytics_service.py  auth_service.py  cache_service.py  email_service.py  item_service.py  notification_service.py  search_service.py  storage_service.py
src/workers/: __init__.py  cleanup_worker.py  email_worker.py
tests/: conftest.py  test_admin.py  test_analytics.py  test_auth.py  test_health.py  test_items.py  test_notifications.py  test_search.py  test_upload.py
tests/fixtures/: factory.py
web/: index.html  manifest.json
